[package]
name = "ym-file-parser"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
publish = false
description = "A library for parsing the AY/YM chiptune format files."
homepage = "https://github.com/royaltm/rust-ym-file-parser"
repository = "https://github.com/royaltm/rust-ym-file-parser"
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

[dependencies]
arrayvec = "0.5.1"
bitflags = "1.2"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
simple_logger = "1.6.0"

[dependencies.delharc]
version = "0.2.1"
default-features = false
features = []
