[package]
name = "ym-file-parser"
version = "0.1.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
publish = false
description = "A library for parsing the YM chiptune format files."
homepage = "https://royaltm.github.io/rust-ym-file-parser/"
repository = "https://github.com/royaltm/rust-ym-file-parser"
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

[dependencies]
arrayvec = "0.5.2"
bitflags = "1.3"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
simple_logger = "1.16.0"

[dependencies.delharc]
version = "0.2.2"
default-features = false
features = []
