[package]
name = "ym-file-parser"
version = "0.2.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2021"
publish = false
description = "A library for parsing the YM chiptune format files."
homepage = "https://royaltm.github.io/rust-ym-file-parser/"
repository = "https://github.com/royaltm/rust-ym-file-parser"
license = "MIT"
readme = "README.md"
exclude = [".gitignore", "examples/*"]

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.3"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"

[dependencies.delharc]
version = "0.5.0"
default-features = false
features = []

[workspace]
members = [
    "examples/*"
]
