[package]
name = "ym-player"
version = "0.2.0"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2021"
publish = false
description = "An example YM chiptune format player using an AY-3-891x emulator."
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
cpal = "0.14"
log = "0.4"
simple_logger = { version = "4.2", default-features = false, features = ["colors"] }
ym-file-parser = { path = "../.." }

[dependencies.spectrusty-core]
version = "*"
git = "https://github.com/royaltm/spectrusty"
default-features = false

[dependencies.spectrusty-peripherals]
version = "*"
git = "https://github.com/royaltm/spectrusty"
default-features = false

[dependencies.spectrusty-audio]
version = "*"
git = "https://github.com/royaltm/spectrusty"
default-features = false
features = ["cpal"]
